--- a/index.html
+++ b/index.html
@@ -26,20 +26,16 @@
 		<!-- Navigation 8 -->
 		<nav class="pt-30 pb-30 bg-light lh-40 text-center navigation_8">
 			<div class="container px-xl-0">
-				<div class="row align-items-center">
+				<div class="row fixed-top p-3 bg-light opacity justify-content-center">
 					<div class="col-lg-3 text-lg-left">
-						<a href="#" class="link logo color-main">Startup</a>
+						<a href="#" class="link logo color-main">Troy Fuhriman</a>
 					</div>
-					<div class="col-lg-6">
-						<a href="#" class="link mr-15 color-main">Podcast</a>
-						<a href="#" class="link mx-15 color-main">Yoga</a>
-						<a href="#" class="link mx-15 color-main">Shop</a>
-						<a href="#" class="link mx-15 color-main">Online Yoga</a>
-						<a href="#" class="link ml-15 color-main">Blog</a>
-					</div>
-					<div class="mt-10 mt-lg-0 col-lg-3 text-lg-right">
-						<a href="#" class="link mr-30 color-main">Login</a>
-						<a href="#" class="btn sm border-gray color-main f-16">Sign Up</a>
+					<div class=" col-lg-6">
+						<a href="#about" class="link mx-15 color-main">About Me</a>
+						<a href="#" class="link mr-15 color-main">Skills</a>
+						<a href="#" class="link mx-15 color-main">Contact Me</a>
+						<a href="#" class="link mx-15 color-main">Projects</a>
+						<a href="#" class="link ml-15 color-main">Resume</a>
 					</div>
 				</div>
 			</div>
@@ -50,38 +46,35 @@
 			<div class="container px-xl-0">
 				<div class="mb-md-5 row justify-content-between align-items-center align-items-xl-start">
 					<div class="col-md-7 col-xl-6">
-						<div class="pb-15 color-heading f-22 medium op-7"><div>Yoga Teacher Training</div></div>
-						<h2 class="text-adaptive">Our Experienced Faculty is Here to Guide You</h2>
+						<div id="about" class="pb-15 color-heading f-22 medium op-7"><div>About Me</div></div>
+						<p class="text-adaptive">Full-stack software developer with strong problem-solving skills and a good sense of user interface. Well-rounded in both server development as well as front-end styling. Excellent people skills with a strong desire to bring an uplifting culture to team collaboration and a drive to truly make a difference. Background in psychology, sales, and customer service lends to the ability to build great relationships with client, coworkers, and consumers. Passionate about ensuring that all parties are not just satisfied with end product but enjoy the process of collaboration and development.</p>
 					</div>
-					<div class="col-md-5 col-xl-6">
-						<img src="i/application_21_img_1.png" srcset="i/application_21_img_1@2x.png 2x" alt="" class="img-fluid mt-30 mt-md-0" />
+					<div class="col-md-4 col-xl-4">
+						<img src="i/IMG_7149-2.jpg" srcset="i/application_21_img_1@2x.png 2x" alt="" class="img-fluid mt-md-0 shadow rounded" />
 					</div>
 				</div>
-				<div class="mt-20 mt-md-0 row">
-					<div class="mt-30 col-md-4 no-gutters">
-						<div class="pb-10 color-heading f-14 bold text-uppercase sp-20">01</div>
-						<div class="pb-15 color-main f-32 bold">Decrease Stress</div>
-						<div class="col-xl-9 color-heading f-18 medium op-7 text-adaptive">						<div>
-Yoga is known for its ability to ease stress and promote relaxation.
-						</div>
-						</div>
+				<div class="mt-20 mt-md-0 row justify-content-between">
+					<div class="text-center col-11 pb-15 color-main mb-3 f-32 bold">Skills
 					</div>
-					<div class="mt-30 col-md-4 no-gutters">
-						<div class="pb-10 color-heading f-14 bold text-uppercase sp-20">02</div>
-						<div class="pb-15 color-main f-32 bold">Relieves Anxiety</div>
-						<div class="col-xl-9 color-heading f-18 medium op-7 text-adaptive">						<div>
-Many people begin practicing yoga as a way to cope with feelings of anxiety.
-						</div>
-						</div>
-					</div>
-					<div class="mt-30 col-md-4 no-gutters">
-						<div class="pb-10 color-heading f-14 bold text-uppercase sp-20">03</div>
-						<div class="pb-15 color-main f-32 bold">Fight Depression</div>
-						<div class="col-xl-9 color-heading f-18 medium op-7 text-adaptive">						<div>
-After two weeks, participants had fewer symptoms of depression and lower levels of cortisol. 
-						</div>
-						</div>
-					</div>
+						<ul class="text-adaptive col-2">
+							<li>Javascript</li>
+							<li>HTML/CSS</li>
+							<li>C#</li>
+							<li>.NET Core</li>
+						</ul>
+						<ul class="text-adaptive col-2">
+							<li>MVC Pattern</li>
+							<li>VueJs</li>
+							<li>MySQL</li>
+							<li>bootstrap</li>
+							<li>Visual Studio Code</li>
+						</ul>
+						<ul class="text-adaptive col-2">
+							<li>NodeJs</li>
+							<li>Agile Methodologies</li>
+							<li>MongoDb</li>
+							<li>RESTful Webservices</li>
+						</ul>
 				</div>
 			</div>
 		</section>
