links and pictures

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" >
-		<title>Startup 4.0 - One Page</title>
+		<title>Troy Fuhriman</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="i/favicon.png" type="image/x-icon">
 		<!-- Google Fonts -->
@@ -32,29 +32,31 @@
 					</div>
 					<div class=" col-lg-6">
 						<a href="#about" class="link mx-15 color-main">About Me</a>
-						<a href="#" class="link mr-15 color-main">Skills</a>
-						<a href="#" class="link mx-15 color-main">Contact Me</a>
-						<a href="#" class="link mx-15 color-main">Projects</a>
-						<a href="#" class="link ml-15 color-main">Resume</a>
+						<a href="#skills" class="link mr-15 color-main">Skills</a>
+						<a href="#projects" class="link mx-15 color-main">Projects</a>
+						<a href="#contact" class="link mx-15 color-main">Contact Me</a>
 					</div>
 				</div>
 			</div>
 		</nav>
 
 		<!-- Application 21 -->
-		<section class="pt-100 pb-100 bg-light application_21">
+		<section id="about" class="pt-100 pb-100 bg-light application_21">
 			<div class="container px-xl-0">
 				<div class="mb-md-5 row justify-content-between align-items-center align-items-xl-start">
 					<div class="col-md-7 col-xl-6">
-						<div id="about" class="pb-15 color-heading f-22 medium op-7"><div>About Me</div></div>
+						<div  class="pb-15 color-heading f-22 medium op-7"><div>About Me</div></div>
 						<p class="text-adaptive">Full-stack software developer with strong problem-solving skills and a good sense of user interface. Well-rounded in both server development as well as front-end styling. Excellent people skills with a strong desire to bring an uplifting culture to team collaboration and a drive to truly make a difference. Background in psychology, sales, and customer service lends to the ability to build great relationships with client, coworkers, and consumers. Passionate about ensuring that all parties are not just satisfied with end product but enjoy the process of collaboration and development.</p>
 					</div>
 					<div class="col-md-4 col-xl-4">
 						<img src="i/IMG_7149-2.jpg" srcset="i/application_21_img_1@2x.png 2x" alt="" class="img-fluid mt-md-0 shadow rounded" />
 					</div>
 				</div>
-				<div class="mt-20 mt-md-0 row justify-content-between">
-					<div class="text-center col-11 pb-15 color-main mb-3 f-32 bold">Skills
+				<div id="skills" class=" p-5">
+
+				</div>
+				<div  class="mt-20 mt-md-0 row justify-content-between">
+					<div  class="text-center col-11 pb-15 color-main mb-3 f-32 bold">Skills
 					</div>
 						<ul class="text-adaptive col-2">
 							<li>Javascript</li>
@@ -80,23 +82,23 @@
 		</section>
 
 		<!-- Feature 45 -->
-		<section class="pt-105 pb-70 bg-light feature_45">
+		<section id="projects" class="pt-105 pb-70 bg-light feature_45">
 			<div class="container px-xl-0">
 				<div class="row justify-content-center">
 					<div class="col-xl-8 col-lg-10 text-center">
-						<h2 class="mb-25 small">Best-in-Class Trainings</h2>
-						<div class="mb-60 f-22 color-heading text-adaptive description">Whether your goal is to teach or simply uncover new depths in your practice, YogaWorks 200-Hour Yoga Teacher Training.
-						</div>
+						<h2 class="mb-25 small">Projects</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center justify-content-lg-between no-gutters">
 					<div class="col-xl-7 col-lg-6 col-md-8">
-						<img src="i/feature_45_img.jpg" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 mb-lg-0 img-fluid radius10" />
+						<a target="_blank" href="https://homescholar.herokuapp.com/#/">
+						<img href="https://homescholar.herokuapp.com/#/" src="i/Screen Shot 2020-07-23 at 10.49.33 AM.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
+					</a>
 					</div>
 					<div class="mt-10 col-lg-5">
 						<div class="row justify-content-center text-center text-md-left">
 							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">30+ Years</div>
+								<div class="mb-15 f-22 title">20+ Countries</div>
 								<div class="color-heading text-adaptive">Our curriculum has been developed over 3 decades and is rich with the accumulated experience of dozens of teachers.
 								</div>
 							</div>
@@ -127,69 +129,40 @@
 							<div class="col-lg-10 color-heading f-18 medium text-adaptive">YogaWorks’ approach is anchored in a deep understanding of the body and biomechanics, and goes far beyond teaching poses alone.
 							</div>
 						</div>
-						<div class="mt-30 row align-items-center no-gutters bottom">
-							<img src="i/application_18_img_2.png" srcset="i/application_18_img_2@2x.png 2x" alt="" class="mr-15" />
-							<div class="col-10 color-main f-14 medium text-adaptive">New amazing feelings with our senior teachers 
-							</div>
-						</div>
 					</div>
 					<div class="mt-50 mt-md-0 col-md-6 col-lg-6 col-xl-7 d-flex justify-content-center justify-content-md-end align-items-center no-gutters">
-						<img src="i/application_18_img_1.png" srcset="i/application_18_img_1@2x.png 2x" alt="" class="img-fluid" />
+						<a href="https://troyfuhriman.github.io/Click-Game/" target="_blank">
+							<img src="i/keepr.png" srcset="i/application_18_img_1@2x.png 2x" alt="" class="img-fluid" />
+						</a>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<!-- Content 33 -->
-		<section class="pt-85 pb-90 bg-light content_33">
+		<!-- 4Sight -->
+		<section class="pt-105 pb-70 bg-light feature_45">
 			<div class="container px-xl-0">
-				<div class="row justify-content-center">
-					<div class="col-xl-10">
-						<h2 class="mb-10 small text-center">Yoga Program for Members</h2>
-						<div class="table-responsive-shadow">
-							<div class="table-responsive-xl">
-								<table class="table table-borderless table-striped m-0 w-970">
-									<thead>
-										<tr>
-											<th class="color-heading f-14 semibold text-uppercase sp-20" scope="col">Days</th>
-											<th class="color-heading f-14 semibold text-uppercase sp-20" scope="col">&</th>
-											<th class="color-heading f-14 semibold text-uppercase sp-20" scope="col">Time</th>
-											<th class="color-heading f-14 semibold text-uppercase sp-20" scope="col">(On/Off)Line</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Day 1</td>
-											<td class="color-heading">half-bound lotus west extension</td>
-											<td>55 min</td>
-											<td>Online</td>
-										</tr>
-										<tr>
-											<td>Day 2</td>
-											<td class="color-heading">wheel pose</td>
-											<td>35 min</td>
-											<td>Online</td>
-										</tr>
-										<tr>
-											<td>Day 3</td>
-											<td class="color-heading">wheel pose variation</td>
-											<td>40 min</td>
-											<td>Online</td>
-										</tr>
-										<tr>
-											<td>Day 4</td>
-											<td class="color-heading">standing split</td>
-											<td>50 min</td>
-											<td>Online</td>
-										</tr>
-										<tr>
-											<td>Day 5</td>
-											<td class="color-heading">dancer&apos;s pose</td>
-											<td>45 min</td>
-											<td>Online</td>
-										</tr>
-									</tbody>
-								</table>
+				<div class="row justify-content-center justify-content-lg-between no-gutters">
+					<div class="col-xl-7 col-lg-6 col-md-8">
+						<a target="_blank" href="https://homescholar.herokuapp.com/#/">
+						<img href="https://use4sight.herokuapp.com/#/" src="i/4Sight.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
+					</a>
+					</div>
+					<div class="mt-10 col-lg-5">
+						<div class="row justify-content-center text-center text-md-left">
+							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
+								<div class="mb-15 f-22 title">20+ Countries</div>
+								<div class="color-heading text-adaptive">Our curriculum has been developed over 3 decades and is rich with the accumulated experience of dozens of teachers.
+								</div>
+							</div>
+							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
+								<div class="mb-15 f-22 title">20+ Countries</div>
+								<div class="color-heading text-adaptive">Our globally-acclaimed trainings take place in beautiful destinations around the globe.
+								</div>
+							</div>
+							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
+								<div class="mb-15 f-22 title">5-Star Yoga Alliance Rated</div>
+								<div class="color-heading text-adaptive">We’re a Yoga Alliance 5-star rated training school based on past reviews from our trainees.
+								</div>
 							</div>
 						</div>
 					</div>
@@ -197,39 +170,34 @@
 			</div>
 		</section>
 
-		<!-- Content 16 -->
-		<section class="pt-95 pb-85 bg-dark color-white content_16">
-			<div class="container px-xl-0">
-				<div class="row align-items-center">
-					<div class="col-lg-1">
-					</div>
-					<div class="col-xl-2 col-md-3">
-						<img src="i/content_16_logo.png" srcset="i/content_16_logo@2x.png 2x" alt="" class="img-fluid" />
-					</div>
-					<div class="col-xl-7 col-lg-8 col-md-9 mt-4 mt-md-0">
-						<h2 class="pl-15 small">An Innovative Curriculum</h2>
-						<div class="mt-15 pl-15 f-18 medium op-7 text-adaptive">						<div>
-While the curriculum is stacked for an immersive learning experience, the delivery is hands-on and personalized, encouraging a well-rounded approach to developing both your personal practice and your skills.
-						</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
 
 		<!-- Content 3 -->
-		<section class="pt-105 pb-85 bg-light content_3">
-			<div class="container px-xl-0">
+		<section id="contact" class="pt-105 pb-85 bg-light content_3">
+			<div class="container-fluid px-xl-0">
 				<div class="row justify-content-center">
 					<div class="col-xl-10">
-						<h2 class="small text-center">Yoga Works instructors are expertly-trained, impassioned educators who make yoga accessible to every body.
+						<h2 class="small text-center">Contact Me
 						</h2>
-						<div class="mt-30 row f-18 medium color-heading op-7 text-center text-md-left blocks">
-								<div class="mt-30 col-md-6 text-adaptive">No matter which instructor you have at YogaWorks, you’ll be alongside an industry-leading yoga trainer who’s ready to simplify your learning process.
+						<div class="row justify-content-center">
+							<a target="_blank" href="https://www.canva.com/design/DAEB7S942Eo/15pjvfSfTEhQG8TL6k2rqw/view?utm_content=DAEB7S942Eo&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" class="card rounded border-dark bg-light shadow col-4">
+								<div class="card-body">
+									<h4 class="card-title text-center">Resume</h4>
+									<p class="card-text text-center">I'd love to fulfill your software development needs!</p>
 								</div>
-								<div class="mt-30 col-md-6 text-adaptive">They’ve been featured in international publications and programs, led sold out workshops and retreats, and shared their love of yoga in destinations near.
-								</div>
-							</div>
+							</a>
+						</div>
+						<div class="mt-30 row f-18 medium color-heading op-7 justify-content-between text-center text-md-left blocks">
+								<a href="https://www.linkedin.com/in/troyfuhriman/" target="_blank" class="mt-30 col-md-3 text-adaptive text-primary"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i>
+								</a>
+								<a href="https://github.com/TroyFuhriman" target="_blank" class="mt-30 col-md-3 text-adaptive"><i class="fa fa-github fa-3x" aria-hidden="true"></i>
+								</a>
+								<h5 class="mt-30 col-md-3 text-adaptive">Phone/text: 208-871-4633 
+								</h5>
+								<a href="mailto:tkfuhriman@gmail.com" target="_blank">
+									<h5  class="mt-30 col-md-3 text-adaptive">Email Tkfuhriman@gmail.com
+									</h5>
+								</a>
+							</>
 						</div>
 					</div>
 				</div>
@@ -240,73 +208,7 @@ While the curriculum is stacked for an immersive learning experience, the delive
 		<footer class="pt-90 pb-75 bg-dark color-white text-center text-sm-left footer_9">
 			<div class="container px-xl-0">
 				<div class="row justify-content-center">
-					<div class="mb-50 mb-lg-0 col-lg-4">
-						<div class="mb-30 f-22 title">200,000 users registered since January 2015</div>
-						<div class="mb-35 text-adaptive">We’ve created the product that will help your balance and flexibility
-						</div>
-						<form action="form-handler.php" method="POST" class="mb-100 row no-gutters">
-							<div class="col-lg-7 col-md-5 col-7">
-								<input type="email" name="email" placeholder="Your email" required="required" class="input w-full sm border-transparent-white focus-white color-white placeholder-transparent-white" />
-							</div>
-							<div class="col-lg-5 col-md-3 col-5">
-								<div class="ml-10">
-									<button class="btn sm action-1 w-full f-16">Subscribe</button>
-								</div>
-							</div>
-						</form>
-						<div class="row no-gutters justify-content-center justify-content-sm-start">
-							<div class="col-lg-auto col-sm-4 col-auto">
-								<a href="#" class="link mr-10 color-white">Terms of Service</a>
-							</div>
-							<div class="col-lg-auto col-sm-4 col-auto">
-								<a href="#" class="link ml-10 color-white">Privacy Policy</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-1">
-					</div>
-					<div class="col-lg-2 col-sm-4 col-6 links">
-						<div class="mb-25 f-18 medium title">Yoga Teachers</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Poses</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Shop</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Programs</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Blog</a>
-						</div>
-					</div>
-					<div class="col-lg-2 col-sm-4 col-6 links">
-						<div class="mb-25 f-18 medium title">Yoga Online</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Events</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Education</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Contact</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Videos</a>
-						</div>
-						<div>
-							<a href="#" class="link mb-20 color-white">Podcasts</a>
-						</div>
-					</div>
-					<div class="col-xl-1 d-none d-xl-block">
-					</div>
-					<div class="mt-50 mt-sm-0 col-xl-2 col-lg-3 col-sm-4 col-7 text-center">
-						<a href="#" class="btn action-3 w-full px-0">Start Trainings</a>
-						<div class="mt-20">
-							<span>or </span>
-							<a href="#" class="link color-white">Learn More</a>
-						</div>
-					</div>
+					<div class="col text-center"><i class="fa fa-heart" aria-hidden="true"></i> Made with love by Troy <i class="fa fa-heart" aria-hidden="true"></i></div>
 				</div>
 			</div>
 		</footer>
@@ -336,6 +238,7 @@ While the curriculum is stacked for an immersive learning experience, the delive
 		<script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
 		-->
 		<!-- Bootstrap 4.3.1 JS -->
+		<script src="https://kit.fontawesome.com/a8ffab3d3e.js" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 		<!-- Fancybox 3 jQuery plugin JS (Open images and video in popup) -->
 		<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
