--- a/index.html
+++ b/index.html
@@ -91,26 +91,20 @@
 				</div>
 				<div class="row justify-content-center justify-content-lg-between no-gutters">
 					<div class="col-xl-7 col-lg-6 col-md-8">
-						<a target="_blank" href="https://homescholar.herokuapp.com/#/">
+						<a class="hover" target="_blank" href="https://homescholar.herokuapp.com/#/">
 						<img href="https://homescholar.herokuapp.com/#/" src="i/Screen Shot 2020-07-23 at 10.49.33 AM.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
 					</a>
 					</div>
 					<div class="mt-10 col-lg-5">
 						<div class="row justify-content-center text-center text-md-left">
 							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">20+ Countries</div>
-								<div class="color-heading text-adaptive">Our curriculum has been developed over 3 decades and is rich with the accumulated experience of dozens of teachers.
-								</div>
-							</div>
-							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">20+ Countries</div>
-								<div class="color-heading text-adaptive">Our globally-acclaimed trainings take place in beautiful destinations around the globe.
-								</div>
-							</div>
-							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">5-Star Yoga Alliance Rated</div>
-								<div class="color-heading text-adaptive">We’re a Yoga Alliance 5-star rated training school based on past reviews from our trainees.
-								</div>
+								<ul class="mb-15 f-22 bold title">HomeScholar</ul>
+								<li class="color-heading text-adaptive">This was an application made for homeschooling parents that desire to get organized in their homeschooling efforts. Users can create assignments, build out a calendar, and transcripts are auto-filled to keep track of progress made. 
+								</li>
+								<li class="color-heading text-adaptive">Built in collaboration with 3 other great software developers
+								</li>
+								<li class="color-heading text-adaptive">Full-stack application built with VueJs NodeJs and MongoDb. 
+								</li>
 							</div>
 						</div>
 					</div>
@@ -124,15 +118,23 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-6 col-xl-5 no-gutters d-flex flex-column justify-content-between">
 						<div class="top no-gutters">
-							<div class="pt-30 pb-25 color-main f-32 bold text-adaptive">Deepen your practice and knowledge on a yoga teacher training course with our company
-							</div>
-							<div class="col-lg-10 color-heading f-18 medium text-adaptive">YogaWorks’ approach is anchored in a deep understanding of the body and biomechanics, and goes far beyond teaching poses alone.
-							</div>
+							<ul class="mb-15 f-22 bold title">Keepr</ul>
+							<li class="col-lg-10 color-heading text-adaptive">Inspired by Pinterest. Users can create "keeps" to put into their "vault" and share these keeps with others.  
+							</li>
+							<li>
+								Final Project for Codeworks
+							</li>
+							<li>
+								Emphasis on individual programming
+							</li>
+							<li>
+								Full Stack Application focusing on using C# and MySQL
+							</li>
 						</div>
 					</div>
 					<div class="mt-50 mt-md-0 col-md-6 col-lg-6 col-xl-7 d-flex justify-content-center justify-content-md-end align-items-center no-gutters">
-						<a href="https://troyfuhriman.github.io/Click-Game/" target="_blank">
-							<img src="i/keepr.png" srcset="i/application_18_img_1@2x.png 2x" alt="" class="img-fluid" />
+						<a class="hover" href="https://troyfuhriman.github.io/Click-Game/" target="_blank">
+							<img src="i/keepr.png" srcset="i/application_18_img_1@2x.png 2x" alt="" class="rounded img-fluid" />
 						</a>
 					</div>
 				</div>
@@ -143,27 +145,21 @@
 			<div class="container px-xl-0">
 				<div class="row justify-content-center justify-content-lg-between no-gutters">
 					<div class="col-xl-7 col-lg-6 col-md-8">
-						<a target="_blank" href="https://homescholar.herokuapp.com/#/">
-						<img href="https://use4sight.herokuapp.com/#/" src="i/4Sight.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
+						<a class="hover" target="_blank" href="https://homescholar.herokuapp.com/#/">
+						<img src="i/4Sight.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
 					</a>
 					</div>
 					<div class="mt-10 col-lg-5">
 						<div class="row justify-content-center text-center text-md-left">
 							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">20+ Countries</div>
-								<div class="color-heading text-adaptive">Our curriculum has been developed over 3 decades and is rich with the accumulated experience of dozens of teachers.
-								</div>
-							</div>
-							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">20+ Countries</div>
-								<div class="color-heading text-adaptive">Our globally-acclaimed trainings take place in beautiful destinations around the globe.
-								</div>
-							</div>
-							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<div class="mb-15 f-22 title">5-Star Yoga Alliance Rated</div>
-								<div class="color-heading text-adaptive">We’re a Yoga Alliance 5-star rated training school based on past reviews from our trainees.
-								</div>
-							</div>
+								<ul class="mb-15 f-22 bold title">Keepr</ul>
+								<li class="color-heading text-adaptive">A "trello" inspired application where users can create boards and collaborate with other users to create tasks, lists and comments to help complete projects in an organized manner
+								</li>
+								<li class="color-heading text-adaptive">Built with a focus on partner programming
+								</li>
+								<li class="color-heading text-adaptive">Full Stack Application utilizing VueJs, NodeJs, and MogoDb
+
+								</li>
 						</div>
 					</div>
 				</div>
