mobile updates and better content

--- a/index.html
+++ b/index.html
@@ -43,40 +43,50 @@
 		<!-- Application 21 -->
 		<section id="about" class="pt-100 pb-100 bg-light application_21">
 			<div class="container px-xl-0">
-				<div class="mb-md-5 row justify-content-between align-items-center align-items-xl-start">
+				<div class="mb-md-5 mt-3 row justify-content-between align-items-center align-items-xl-start">
 					<div class="col-md-7 col-xl-6">
 						<div  class="pb-15 color-heading f-22 medium op-7"><div>About Me</div></div>
-						<p class="text-adaptive">Full-stack software developer with strong problem-solving skills and a good sense of user interface. Well-rounded in both server development as well as front-end styling. Excellent people skills with a strong desire to bring an uplifting culture to team collaboration and a drive to truly make a difference. Background in psychology, sales, and customer service lends to the ability to build great relationships with client, coworkers, and consumers. Passionate about ensuring that all parties are not just satisfied with end product but enjoy the process of collaboration and development.</p>
+						<p class="text-adaptive">Hello! I am a full-stack software developer with a passion for problem-solving and a good sense of user interface. I am skilled in Javascript, C#, VueJs, MySQL and front-end-design. I am able to learn things rapidly and adapt quickly to change. I have a proven success in learning new technologies, concepts and development techniques during the application build process. I also have a background in psychology, sales, and customer service. This background lends to the ability to build great relationships with clients, coworkers, and consumers. It is very important to me that I ensure all parties are not just satisfied with the end product, but enjoy the process of collaboration and development. </p>
 					</div>
 					<div class="col-md-4 col-xl-4">
-						<img src="i/IMG_7149-2.jpg" srcset="i/application_21_img_1@2x.png 2x" alt="" class="img-fluid mt-md-0 shadow rounded" />
+						<img src="i/IMG_7149-2.jpg"  alt="" class="img-fluid mt-md-0 shadow rounded border border-dark" />
 					</div>
 				</div>
 				<div id="skills" class=" p-5">
 
 				</div>
-				<div  class="mt-20 mt-md-0 row justify-content-between">
-					<div  class="text-center col-11 pb-15 color-main mb-3 f-32 bold">Skills
-					</div>
-						<ul class="text-adaptive col-2">
+				<div class="row">
+					<h3 class="col-12 text-center mb-4">Skills</h3>
+					<div class="col-md-4 col-10 offset-2 offset-md-0">
+						<ul class="mb-0">
 							<li>Javascript</li>
-							<li>HTML/CSS</li>
+							<li>HTML</li>
+							<li>CSS</li>
 							<li>C#</li>
-							<li>.NET Core</li>
-						</ul>
-						<ul class="text-adaptive col-2">
-							<li>MVC Pattern</li>
 							<li>VueJs</li>
 							<li>MySQL</li>
-							<li>bootstrap</li>
-							<li>Visual Studio Code</li>
 						</ul>
-						<ul class="text-adaptive col-2">
+					</div>
+					<div class="col-md-4 col-10 offset-2 offset-md-0">
+						<ul class="mb-0">
+							<li>Bootstrap</li>
 							<li>NodeJs</li>
 							<li>Agile Methodologies</li>
 							<li>MongoDb</li>
 							<li>RESTful Webservices</li>
+							<li>Visual Studio Code</li>
 						</ul>
+					</div>
+					<div class="col-md-4 col-10 offset-2 offset-md-0 ">
+						<ul class="mb-0">
+							<li>Scrum</li>
+							<li>MVC Pattern</li>
+							<li>Problem Solving</li>
+							<li>Web API</li>
+							<li>Auth0</li>
+							<li>.Net Core</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -86,25 +96,37 @@
 			<div class="container px-xl-0">
 				<div class="row justify-content-center">
 					<div class="col-xl-8 col-lg-10 text-center">
-						<h2 class="mb-25 small">Projects</h2>
+						<h2 class="mb-md-5 pb-1 pb-md-5">Projects</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center justify-content-lg-between no-gutters">
-					<div class="col-xl-7 col-lg-6 col-md-8">
+					<div class="col-xl-7 col-lg-6 col-md-8 order-2 order-md-1">
 						<a class="hover" target="_blank" href="https://homescholar.herokuapp.com/#/">
-						<img href="https://homescholar.herokuapp.com/#/" src="i/Screen Shot 2020-07-23 at 10.49.33 AM.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
+						<img href="https://homescholar.herokuapp.com/#/" src="i/Screen Shot 2020-07-23 at 10.49.33 AM.png"  alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10 border border-dark" />
 					</a>
 					</div>
-					<div class="mt-10 col-lg-5">
-						<div class="row justify-content-center text-center text-md-left">
+					<div class="mt-10 col-lg-5 order-1 order-md-2">
+						<div class="row justify-content-center">
 							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<ul class="mb-15 f-22 bold title">HomeScholar</ul>
-								<li class="color-heading text-adaptive">This was an application made for homeschooling parents that desire to get organized in their homeschooling efforts. Users can create assignments, build out a calendar, and transcripts are auto-filled to keep track of progress made. 
+								<a href="https://homescholar.herokuapp.com/#/" target="_blank">
+									<h4 class="mb-3 text-center mb-4 project-link">Homescholar</h4>
+								</a>
+								<ul>
+								<li class="color-heading text-adaptive">Full Stack application made specifically for homeschooling parents that desire to get organized in their homeschooling efforts, built with Coronavirus effects in mind
 								</li>
-								<li class="color-heading text-adaptive">Built in collaboration with 3 other great software developers
+								<li class="color-heading text-adaptive">Primarily responsible for layout, design, and testing
 								</li>
-								<li class="color-heading text-adaptive">Full-stack application built with VueJs NodeJs and MongoDb. 
+								<li class="color-heading text-adaptive">Utilized many outside libraries i.e., sweetalerts, FullCalendar.io, helmet, moment.js, socket.io, vue-html-to-paper and many others
 								</li>
+								<li class="color-heading text-adaptive">Homeschooling parents can add assignments to the calendar, keep track of progress made on those assignments, and print out document-ready transcripts 
+								</li>
+								<li class="color-heading text-adaptive">Team operated with Agile methodologies by keeping the sprint backlog up to date, doing sprint reviews, and daily stand-ups
+								</li>
+								<li class="color-heading text-adaptive">Built in collaboration with 3 other software developers
+								</li>
+								<li class="color-heading text-adaptive">Application built with a focus on team collaboration
+								</li>
+							</ul>
 							</div>
 						</div>
 					</div>
@@ -118,23 +140,30 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-6 col-xl-5 no-gutters d-flex flex-column justify-content-between">
 						<div class="top no-gutters">
-							<ul class="mb-15 f-22 bold title">Keepr</ul>
-							<li class="col-lg-10 color-heading text-adaptive">Inspired by Pinterest. Users can create "keeps" to put into their "vault" and share these keeps with others.  
+							<a href="https://keepr-tkf.herokuapp.com/#/" target="_blank">
+								<h4 class="text-center mb-4 project-link">Keepr</h4>
+							</a>
+							<ul>
+							<li >Inspired by Pinterest. Users can create "keeps" to put into their "vault" and share these keeps with others.  
 							</li>
 							<li>
-								Final Project for Codeworks
+							Challenged to a 1 week sprint to finish the application
 							</li>
 							<li>
-								Emphasis on individual programming
+								Employed software testing to find server edge cases and to successfully protect user "keeps" and "vaults" from being unintentionally altered by non-users
 							</li>
 							<li>
-								Full Stack Application focusing on using C# and MySQL
+								Docker implementation used to deploy on herokuapp
 							</li>
+							<li>
+								Full Stack Application focusing on using C#, data relationships and MySQL
+							</li>
+							</ul>
 						</div>
 					</div>
 					<div class="mt-50 mt-md-0 col-md-6 col-lg-6 col-xl-7 d-flex justify-content-center justify-content-md-end align-items-center no-gutters">
-						<a class="hover" href="https://troyfuhriman.github.io/Click-Game/" target="_blank">
-							<img src="i/keepr.png" srcset="i/application_18_img_1@2x.png 2x" alt="" class="rounded img-fluid" />
+						<a class="hover" href="https://keepr-tkf.herokuapp.com/#/" target="_blank">
+							<img src="i/keepr.png" alt="" class="rounded img-fluid border border-dark" />
 						</a>
 					</div>
 				</div>
@@ -144,22 +173,29 @@
 		<section class="pt-105 pb-70 bg-light feature_45">
 			<div class="container px-xl-0">
 				<div class="row justify-content-center justify-content-lg-between no-gutters">
-					<div class="col-xl-7 col-lg-6 col-md-8">
-						<a class="hover" target="_blank" href="https://homescholar.herokuapp.com/#/">
-						<img src="i/4Sight.png" srcset="i/feature_45_img@2x.jpg 2x" alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10" />
+					<div class="col-xl-7 col-lg-6 col-md-8 order-2 order-md-1">
+						<a class="hover" target="_blank" href="https://use4sight.herokuapp.com/#/">
+						<img src="i/4Sight.png"  alt="" class="mb-50 shadow mb-lg-0 img-fluid radius10 border border-dark" />
 					</a>
 					</div>
-					<div class="mt-10 col-lg-5">
-						<div class="row justify-content-center text-center text-md-left">
+					<div class="mt-10 col-lg-5 order-md-2 order-1">
+						<div class="row justify-content-center text-left">
 							<div class="mb-45 col-lg-12 col-md-4 col-sm-8 block">
-								<ul class="mb-15 f-22 bold title">Keepr</ul>
+								<a class="" target="_blank" href="https://use4sight.herokuapp.com/#/">
+									<h4 class="text-center mb-4 project-link">4Sight</h4>
+								</a>
+								<ul>
 								<li class="color-heading text-adaptive">A "trello" inspired application where users can create boards and collaborate with other users to create tasks, lists and comments to help complete projects in an organized manner
+								</li>
+								<li class="color-heading text-adaptive">Primarily responsible for building the server using NodeJs and MongoDb, also for using VueJs to build the layout and design the application
+								</li>
+								<li class="color-heading text-adaptive">Application effectively uses the ability to drag and drop, sweetalerts, and auth0
+								</li>
+								<li class="color-heading text-adaptive">Architectural pattern MVC used to organize data into appropriate logical components
 								</li>
 								<li class="color-heading text-adaptive">Built with a focus on partner programming
 								</li>
-								<li class="color-heading text-adaptive">Full Stack Application utilizing VueJs, NodeJs, and MogoDb
-
-								</li>
+								</ul>
 						</div>
 					</div>
 				</div>
@@ -172,25 +208,25 @@
 			<div class="container-fluid px-xl-0">
 				<div class="row justify-content-center">
 					<div class="col-xl-10">
-						<h2 class="small text-center">Contact Me
+						<h2 class="small text-center mb-5">Contact Me
 						</h2>
 						<div class="row justify-content-center">
-							<a target="_blank" href="https://www.canva.com/design/DAEB7S942Eo/15pjvfSfTEhQG8TL6k2rqw/view?utm_content=DAEB7S942Eo&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" class="card rounded border-dark bg-light shadow col-4">
+							<a target="_blank" href="https://www.canva.com/design/DAEB7S942Eo/15pjvfSfTEhQG8TL6k2rqw/view?utm_content=DAEB7S942Eo&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" class="card rounded border-dark bg-light shadow col-md-4 col-12">
 								<div class="card-body">
 									<h4 class="card-title text-center">Resume</h4>
 									<p class="card-text text-center">I'd love to fulfill your software development needs!</p>
 								</div>
 							</a>
 						</div>
-						<div class="mt-30 row f-18 medium color-heading op-7 justify-content-between text-center text-md-left blocks">
-								<a href="https://www.linkedin.com/in/troyfuhriman/" target="_blank" class="mt-30 col-md-3 text-adaptive text-primary"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i>
+						<div class="mt-30 row f-18 medium color-heading op-7 justify-content-md-between justify-content-center text-center text-md-left blocks">
+								<a href="https://www.linkedin.com/in/troyfuhriman/" target="_blank" class="mt-30 col-md-3 text-adaptive text-primary col-12"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i>
 								</a>
-								<a href="https://github.com/TroyFuhriman" target="_blank" class="mt-30 col-md-3 text-adaptive"><i class="fa fa-github fa-3x" aria-hidden="true"></i>
+								<a href="https://github.com/TroyFuhriman" target="_blank" class="mt-30 col-md-3 col-12 text-adaptive"><i class="fa fa-github fa-3x" aria-hidden="true"></i>
 								</a>
-								<h5 class="mt-30 col-md-3 text-adaptive">Phone/text: 208-871-4633 
+								<h5 class="mt-30 col-md-3 col-12 text-adaptive">Phone/text: 208-871-4633 
 								</h5>
 								<a href="mailto:tkfuhriman@gmail.com" target="_blank">
-									<h5  class="mt-30 col-md-3 text-adaptive">Email Tkfuhriman@gmail.com
+									<h5  class="mt-30 col-md-3 col-12 text-adaptive">Email Tkfuhriman@gmail.com
 									</h5>
 								</a>
 							</>
